tests/build/cases/ui_node/delegate_iter_not_iter_methods_children_iter.rs
use zero_ui::core::{ui_node, UiNode};

struct NoIterMethods;

struct MyNode {
    children: NoIterMethods,
}

#[ui_node(children_iter)]
impl UiNode for MyNode {}

fn main() {}
